Thu 27 Aug 02:21:09 BST 2009 - Release 0.77

  Allow dispatching to Catalyst Actions, for use with ActionClasses
  etc - fREW

  Fix test if CATALYST_DEBUG environment variable is set

Fri Aug 21 21:20:52 BST 2009 - Release 0.76

  Added two new status response helpers (202 no content and 410 gone),
  and tests - Franck Cuny

Mon Aug 17 14:07:41 BST 2009 - Release 0.75

  Fix optional test failures in catalyst-action-serialize-accept.t

  Added a serializer for JSON::XS

  Made test independent of YAML::Syck bugs (dandv)

Wed Jul 22 23:49:16 BST 2009 (t0m) - Release 0.74

  Switch from NEXT to MRO::Compat (agladdish).

  Add display of additional REST actions in the stats, and also fix a warning
  in Catalyst 5.80 when you forward to another action from inside an
  action_FOO method (as it was confusing the stats).

  POD fixes

  Catalyst::Action::REST no longer @ISA Catalyst or Catalyst::Controller.

  Change constructor to call next::method instead of SUPER::

  Change method used to find the application class to be more correct

Sat Jun 27 20:20:09 EDT 2009 (hdp) - Release 0.73
  Packaging fixes

Thu Jun 25 14:52:29 EDT 2009 (hdp) - Release 0.72
  Refresh Module::Install

Sat Mar 28 09:16:09 PDT 2009 (hdp) - Release 0.71
  Fix RT#44641, missing documented 'end' action

Fri Mar 27 23:21:17 PDT 2009 (hdp) - Release 0.70
  Tests that use JSON were either not checking for the version or checking in a
  way that was a syntax error.

Thu Mar 26 14:16:03 PDT 2009 (hdp) - Release 0.69
  Fix RT#32342, deprecated config loses default map (hdp)
  Fix broken insertion of Catalyst::Request::REST for Action::REST (jshirley)

Wed Mar 25 22:33:38 PDT 2009 (hdp) - Release 0.68
  Remove prompt for ancient and deprecated Data::Denter from Makefile.PL
  Remove Data::Dump, which was entirely unused
  Stop tests from dying with Catalyst 5.80

Wed Mar 25 21:59:59 PDT 2009 (hdp) - Release 0.67
  (no changes from 0.67_01)

Wed Mar 25 09:36:00 PDT 2009 (hdp) - Release 0.67_01