@@ -4,10 +4,11 @@ author:
   - 'Adam Jacob <adam@stalecoffee.org>, with lots of help from mst and jrockway'
 build_requires:
   ExtUtils::MakeMaker: 6.42
+  Moose: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.910'
+generated_by: 'Module::Install version 0.91'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -31,4 +32,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: http://github.com/bobtfish/catalyst-action-rest
-version: 0.77
+version: 0.78
