@@ -15,6 +15,8 @@ requires('Class::Inspector'          => '1.13');
 requires('URI::Find'                 => undef);
 requires('MRO::Compat'               => '0.10');
 
+test_requires 'Moose';
+
 feature 'JSON (application/json) support',
     -default   => 0,
     'JSON'     => '2.12';
